--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,10 @@
 .vto-hide {display:none;}
 .vto-show {display:block !important;}
 
+.vto-application .vto-mobile h1, .vto-application .button, #sgh-vto-overlay-video-buttons a, #sgh_vto_overlay .info-container p, #sgh_vto_overlay .info-container p span, .vto-application .vto-mobile h2, .vto-application .vto-mobile h3, .vto-application .vto-mobile h4, .vto-application .vto-mobile h5, .vto-application .vto-mobile h6 {
+	font-family: 'brandon_regular', Helvetica, Arial, sans-serif !important;
+}
+
 html.vto-bg-no-scroll {
 	position: fixed;
 }
@@ -20,17 +24,22 @@ html.vto-bg-no-scroll {
 }
 
 #sgh_vto_overlay {
-	background-color: #fff;
     width: 100%;
     height: 100%;
     position: fixed;
     z-index: 20001;
     top: 0px;
     bottom: 0px;
+    display: none;
     text-transform: none;
-    right: -100%;
+    right: 0;
     pointer-events: none;
     overflow: hidden;
+}
+
+#sgh_vto_overlay.active {
+    pointer-events: auto;
+    display:  block;
 }
 
 
@@ -38,9 +47,15 @@ html.vto-bg-no-scroll {
     padding: 20px 20px 0px;
     text-align: left;
 }
+
+#sgh_vto_overlay .info-container p span,
+#sgh_vto_overlay .info-container p {
+  font-size:  13px !important;
+}
+
 #sgh_vto_overlay .brand {
 	font-size:  18px;
-	font-family: 'brandon_bold', Helvetica, Arial, sans-serif;
+	font-family: 'brandon_bold', Helvetica, Arial, sans-serif !important;
 	display:  inline-block;
 }
 #sgh_vto_overlay .price {
@@ -61,14 +76,12 @@ html.vto-bg-no-scroll {
 }
 .vto-application .renderer {
 	position: relative;
-	height: calc(100% - 75px);
+	height: height: 100%;
     overflow: hidden;
 }
 
 
-	#sgh_vto_overlay.active {
-	    pointer-events: auto;
-	}
+	
 	#sgh-vto-overlay_container {
     	position: relative;
     	height: 100%;
@@ -77,9 +90,29 @@ html.vto-bg-no-scroll {
 		display: none;
 		height: 100%;
 	}
+	.vto-application .back-bar {
+		padding: 10px 10px !important;
+		border-bottom: solid 1px #ebebeb !important;
+		height: initial !important;
+	}
+	.vto-application .vto-mobile h4,
+	.vto-application .video-capture .open-camera {
+		font-size: 15px !important;
+	}
+
+	#sgh-vto-overlay-video-buttons a,
+	.vto-application .vto-mobile h5 {
+		margin: 0px;
+		font-size: 13px !important;
+		text-transform: none;
+    	text-decoration: none;
+	}
+	.back-bar-arrow {
+	    width: 5px !important;
+	    height: inherit;
+	}
 	#sgh-vto-overlay-video-buttons {
 		padding: 0px 10px;
-	    position: absolute;
 	    overflow: hidden;
 	    z-index: 110;
 	    left: 0px;
@@ -88,6 +121,7 @@ html.vto-bg-no-scroll {
 	    border-bottom: solid 1px #ebebeb;
 	    top: 0px;
 	    background-color: #fff;
+	    text-align:  left;
 	}
 	#sgh-vto-overlay-video-buttons a {
 	    width: initial;
@@ -101,12 +135,12 @@ html.vto-bg-no-scroll {
 	}
 	#sgh-vto-overlay-video-buttons a#vto-open-edit {
 		float: right;
-		padding: 15px 0px;
+		padding: 10px 0px;
 		text-decoration: underline;
 	}
 
 	a.button.white.button_back-arrow {
-	    padding: 15px 0px;
+	    padding: 10px 0px;
 	    border: none;
 	    display: inline-block;
 	    box-sizing: border-box;
@@ -125,15 +159,13 @@ html.vto-bg-no-scroll {
 	    position: absolute;
 	    bottom: 20px;
 	}
-	div#my_vto_div {
+	div#vto_app_root {
 	    height: 100%;
 	}
 	.vto-mobile.fullscreenable.fullscreen {
-		position:  relative !important;
 		height: 100%;
 		z-index:  200 !important;
-		overflow: initial;
-		-webkit-overflow-scrolling: auto;
+
 	}
 	.vto-mobile.fullscreenable.fullscreen > div:first-of-type {
 		padding-top: 50px;
@@ -166,7 +198,7 @@ html.vto-bg-no-scroll {
 	}
 	
 	#sgh_vto_overlay.active div#sgh-vto-video-container {
-	    position: fixed;
+	    background-color:  #fff;
 	    width: 100%;
 	    top: 0;
 	    left: 0;
@@ -178,8 +210,21 @@ html.vto-bg-no-scroll {
 	    flex-direction: column;
 	    align-items: stretch;
 	    text-align: center;
-    	overflow-y: scroll;
-    	-webkit-overflow-scrolling: touch;
+	}
+
+	#sgh_vto_overlay.active #sgh-vto-vtomodel-container {
+		background-color:  #fff;
+	    position: absolute;
+	    width: 100%;
+	    top: 0;
+	    right: 0%;
+	    bottom: 0;
+	    height:  100%;
+    	z-index: 100;
+    	display: flex;
+	    flex-direction: column;
+	    align-items: stretch;
+	    text-align: center;
 	}
 	.sgh-vto-rotate {
 	    position: absolute;
@@ -193,6 +238,19 @@ html.vto-bg-no-scroll {
 	    z-index: 10;
 	    background-color: rgba(255,255,255,0.6);
 	}
+.vto-application .question-container .description {
+	margin-top: 40px !important;
+}
+
+.vto-application .question-container .question-answer {
+	margin-top: 60px !important;
+}
+
+.vto-application .question-container .questions-next-button {
+	margin-top: 60px !important;
+}
+
+
 #sgh-vto-video-edit-container {
 	position: fixed;
 	top: 0px;
@@ -263,7 +321,7 @@ html.vto-bg-no-scroll {
 
 
 #sgh_vto_overlay .vto-application {
-	font-family: "brandon_regular",Helvetica,Arial,sans-serif;
+	font-family: "brandon_regular",Helvetica,Arial,sans-serif !important;
 }
 
 
@@ -276,7 +334,7 @@ html.vto-bg-no-scroll {
 		padding-top: 10px;
 	}
 	.vto-application .renderer {
-	    height: calc(100% - 140px);
+	    height: 100%;
 	}
 }
 
